Add email extraction functionality to Chrome extension
- Added Gmail content script that detects emails and injects 'Extract to Lasker' button
- Created email preview view in popup for confirming email submissions
- Updated background.js to handle email extraction messages
- Enhanced popup.js with email submission logic
- Added email-specific styling to popup.css
- Updated manifest.json with Gmail permissions and content scripts
- Comprehensive README update documenting email extraction flow
- Architecture supports future multi-provider expansion (Outlook, Yahoo, etc.)

Phase 1 complete: Gmail integration ready for n8n webhook setup

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,18 @@
 {
   "manifest_version": 3,
   "name": "Lasker",
-  "version": "1.0.0",
-  "description": "Record voice feedback and automatically process it into product insights",
+  "version": "1.1.0",
+  "description": "Capture voice feedback and extract insights from customer emails",
   "permissions": [
     "storage",
     "activeTab",
-    "offscreen"
+    "offscreen",
+    "tabs"
   ],
   "host_permissions": [
     "https://*.supabase.co/*",
-    "https://*.functions.supabase.co/*"
+    "https://*.functions.supabase.co/*",
+    "https://mail.google.com/*"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -27,6 +29,14 @@
   },
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://mail.google.com/*"],
+      "js": ["content-scripts/gmail.js"],
+      "css": ["content-scripts/gmail.css"],
+      "run_at": "document_idle"
+    }
+  ]
 }
 
