Complete system implementation: email extraction + voice recording fully operational
✅ Features Complete:
- Email extraction from Gmail with one-click button
- Voice recording with transcription (up to 2 minutes)
- Direct Supabase REST API integration
- Smart email parsing (removes signatures, quoted replies)
- Email preview and confirmation flow
- Comprehensive error handling and loading states

✅ Backend Complete:
- Database migrations run (email_submissions, insights tables)
- n8n workflows configured and active
- OpenAI integration for insight extraction
- Three-stage classification (semantic → feature → journey)
- Automated processing (5-minute polling cycle)

✅ Documentation Updated:
- README.md reflects fully operational system
- PHASE_3_5_IMPLEMENTATION_GUIDE.md marked all phases complete
- Added post-launch optimization guide
- Updated testing instructions

System is production-ready and processing insights automatically!

--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,12 @@
       "css": ["content-scripts/gmail.css"],
       "run_at": "document_idle"
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/*.png"],
+      "matches": ["https://mail.google.com/*"]
+    }
   ]
 }
 
